// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag when is clickable should render with clickable styles 1`] = `
.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  cursor: pointer;
  outline: 0;
  background: transparent;
}

.circuit-0:hover {
  background-color: #D8DDE1;
  border: 1px solid #9DA7B1;
}

.circuit-0:focus {
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

<div
  class="circuit-0 circuit-1"
>
  SomeTest
</div>
`;

exports[`Tag when is default should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #D8DDE1;
  padding: 4px 12px;
  cursor: default;
}

<div
  class="circuit-0 circuit-1"
>
  SomeTest
</div>
`;

exports[`Tag when is selected should change the close icon color 1`] = `
.circuit-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  background-color: #3388FF;
  border: 1px solid #3388FF;
  color: #FFFFFF;
}

.circuit-4 {
  padding: 0;
  margin: 0;
  display: inline-block;
  background-color: transparent;
  border: none;
  cursor: pointer;
  overflow: initial;
  color: #5C656F;
  height: 24px;
  width: 24px;
  margin-left: 4px;
  color: #FFFFFF;
}

.circuit-4:hover {
  color: #212933;
}

.circuit-4:focus,
.circuit-4:active {
  outline: none;
}

.circuit-4 > svg {
  height: 100%;
  width: 100%;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  class="circuit-6 circuit-7"
>
  SomeTest
  <button
    class="circuit-2 circuit-3 circuit-4 circuit-5"
    data-testid="tag-close"
    title="remove"
    type="button"
  >
    <svg
      fill="none"
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 7l10 10m0-10L7 17"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
    <span
      class="circuit-0 circuit-1"
    >
      remove
    </span>
  </button>
</div>
`;

exports[`Tag when is selected should change the given icon color 1`] = `
.circuit-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  background-color: #3388FF;
  border: 1px solid #3388FF;
  color: #FFFFFF;
}

.circuit-0 {
  margin-right: 4px;
}

<div
  class="circuit-1 circuit-2"
>
  <div
    class="circuit-0"
    data-testid="tag-icon"
  />
  SomeTest
</div>
`;

exports[`Tag when is selected should render with selected styles 1`] = `
.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  border: 1px solid #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  background-color: #3388FF;
  border: 1px solid #3388FF;
  color: #FFFFFF;
}

<div
  class="circuit-0 circuit-1"
>
  SomeTest
</div>
`;
